Defining source sets based on host OS introduced.

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m
 
 kotlin.native.binary.memoryModel=experimental
 kotlin.native.binary.freezing=disabled
+kotlin.mpp.enableCInteropCommonization.nowarn=true
